Add package-lock Added package-lock.json to be tracked

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tic-tac-toe-project",
+  "name": "tic-tac-toe-project-client",
   "version": "0.0.3",
   "private": true,
   "license": {
